[tool.poetry]
name = "python-rl"
version = "0.1.0"
description = ""
authors = ["vibhav <vibhav.innakedege@alfen.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
